# python-foundations

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
src/calc/: cli.py  operations.py
tests/: test_cli.py  test_operations.py
